[package]
name = "haulage"
version = "0.2.7"
authors = ["Matt Johnson <matt9j@cs.washington.edu>"]
edition = "2021"
description = "A lightweight traffic measuring and logging application specialized for billing and analysis in small network deployments."
license = "MPL-2.0"
maintenance = "actively-developed"
repository = "https://github.com/uw-ictd/haulage"

[dependencies]
anyhow = "1.0.34"
async-trait = "0.1.50"
bytes = "1.0.1"
chrono = "0.4.19"
domain = { version = "0.6.1", features = ["bytes"] }
git-version = "0.3.4"
humantime = "2.1.0"
humantime-serde = "1.0.1"
ipnetwork = "0.17.0"
pnet_packet = "0.29.0"
pnet_datalink = "0.29.0"
rust_decimal = "1.14.3"
serde = { version="1.0.126", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.7"
slog = "2.5.2"
slog-async = "2.4.0"
slog-atomic = "3.0.0"
slog-journald = "2.1.1"
slog-term = "2.5.0"
sqlx = { version = "0.5.5", features = [ "runtime-tokio-rustls", "postgres", "chrono", "ipnetwork", "decimal", "json"] }
structopt = "0.3.21"
thiserror = "1.0.22"
tokio = { version = "^1.5.0", features = ["rt-multi-thread", "time", "sync", "macros", "process"] }
